--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(plot,pinvis)
 S3method(plot,totalice)
 S3method(plot,totalvis)
 export(partial_effects)
+export(scree_plot)
 export(totalvis)
 import(graphics)
 import(stats)
