Updated default sample size, parameters on plot arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,partialvis)
 S3method(plot,pinvis)
 S3method(plot,totalice)
 S3method(plot,totalvis)
+export(get_community_data)
 export(partial_effects)
 export(scree_plot)
 export(totalvis)
